// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BasicDialog /> should render as expected 1`] = `
<div
  aria-labelledby="basicDialogTitle basicDialogDesc"
  aria-modal={true}
  className="css-e1s1x1"
  data-test-id="basicDialog"
  role="alertdialog"
>
  <div
    className="css-1y16c93"
  >
    <Title
      title="Hello World"
    />
    <Content
      content={
        <div>
          Hello World
        </div>
      }
    />
  </div>
  <div
    className="css-1rlrgd0"
  >
    <Buttons
      actions={
        Array [
          Object {
            "action": [MockFunction],
            "label": "action0",
          },
          Object {
            "action": [MockFunction],
            "label": "action1",
          },
          Object {
            "action": [MockFunction],
            "label": "action2",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`<BasicDialog /> should render with minimal props 1`] = `
<div
  aria-labelledby="basicDialogTitle basicDialogDesc"
  aria-modal={true}
  className="css-e1s1x1"
  data-test-id="basicDialog"
  role="alertdialog"
>
  <div
    className="css-1y16c93"
  >
    <Title
      title={null}
    />
    <Content
      content={null}
    />
  </div>
  <div
    className="css-1rlrgd0"
  >
    <Buttons
      actions={Array []}
    />
  </div>
</div>
`;
